...
import pt.ipc_app.domain.user.User
import pt.ipc_app.service.utils.ProblemJson
import pt.ipc_app.ui.components.ProgressState
import pt.ipc_app.ui.components.CircularButton
import pt.ipc_app.ui.components.RegisterUser

const val RegisterMonitorScreenTag = "RegisterMonitorScreen"

/**
 * Register monitor screen.
 *
 * @param onSaveRequest callback to be invoked when the register button is clicked
 */
...
