...
import androidx.compose.ui.text.input.KeyboardType
import androidx.compose.ui.tooling.preview.Preview
import pt.ipc_app.R
import pt.ipc_app.domain.user.User
import pt.ipc_app.ui.components.*

const val LoginScreenTag = "LoginScreen"

/**
 * Login user screen.
 *
 * @param onSaveRequest callback to be invoked when the login button is clicked
 */
...
