...
import pt.ipc_app.R
import pt.ipc_app.domain.user.Client
import pt.ipc_app.domain.user.User
import pt.ipc_app.service.utils.ProblemJson
import pt.ipc_app.ui.components.*

const val RegisterClientScreenTag = "RegisterClientScreen"

private const val WEIGHT_METRIC = " kg"
private const val HEIGHT_METRIC = " cm"

/**
 * Register client screen.
...
